<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvmaytinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_y_t_nh_b_t_i"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etNumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nh_p_v_o_s_th_nh_t"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nh_p_v_o_s_th_hai"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvketqua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/k_t_qu"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnCong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_ng" />

        <Button
            android:id="@+id/btnTru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tr" />

        <Button
            android:id="@+id/btnNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nh_n" />

        <Button
            android:id="@+id/btnChia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chia" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>